// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAuthMiddleware Авторизация найдена должна выбирать выбирать пользователя стандартным образом, если пользователь с defaultUid не найден 1`] = `
Object {
  "accounts": Array [
    Object {
      "avatarId": "0/0-0",
      "b2b": undefined,
      "hasDisk": "1",
      "hasPassword": true,
      "hosted": false,
      "id": "4008306858",
      "isSSO": false,
      "lang": "ru",
      "login": "km256.new.2",
      "name": "km256.new.2",
      "needsPostregistration": false,
      "needsReset": false,
      "needsUpgrade": false,
      "needsUserApprove": false,
      "uid": "4008306858",
      "yandexStaffLogin": "",
    },
  ],
  "auth": true,
  "avatarId": "0/0-0",
  "b2b": undefined,
  "hasDisk": "1",
  "hasPassword": true,
  "hosted": false,
  "id": "4005521594",
  "isSSO": false,
  "lang": "ru",
  "login": "km256.new.1",
  "name": "km256.new.1",
  "needsPostregistration": false,
  "needsReset": false,
  "needsUpgrade": false,
  "needsUserApprove": false,
  "uid": "4005521594",
  "yandexStaffLogin": "",
}
`;

exports[`getAuthMiddleware Авторизация найдена должна выбирать пользователя, заданного в defaultUid если он есть 1`] = `
Object {
  "accounts": Array [
    Object {
      "avatarId": "0/0-0",
      "b2b": undefined,
      "hasDisk": "1",
      "hasPassword": true,
      "hosted": false,
      "id": "4008306858",
      "isSSO": false,
      "lang": "ru",
      "login": "km256.new.2",
      "name": "km256.new.2",
      "needsPostregistration": false,
      "needsReset": false,
      "needsUpgrade": false,
      "needsUserApprove": false,
      "uid": "4008306858",
      "yandexStaffLogin": "",
    },
  ],
  "auth": true,
  "avatarId": "0/0-0",
  "b2b": undefined,
  "hasDisk": "1",
  "hasPassword": true,
  "hosted": false,
  "id": "4005521594",
  "isSSO": false,
  "lang": "ru",
  "login": "km256.new.1",
  "name": "km256.new.1",
  "needsPostregistration": false,
  "needsReset": false,
  "needsUpgrade": false,
  "needsUserApprove": false,
  "uid": "4005521594",
  "yandexStaffLogin": "",
}
`;

exports[`getAuthMiddleware Авторизация найдена должна класть user в req 1`] = `
Object {
  "accounts": Array [
    Object {
      "avatarId": "0/0-0",
      "b2b": undefined,
      "hasDisk": "1",
      "hasPassword": true,
      "hosted": false,
      "id": "4008306858",
      "isSSO": false,
      "lang": "ru",
      "login": "km256.new.2",
      "name": "km256.new.2",
      "needsPostregistration": false,
      "needsReset": false,
      "needsUpgrade": false,
      "needsUserApprove": false,
      "uid": "4008306858",
      "yandexStaffLogin": "",
    },
  ],
  "auth": true,
  "avatarId": "0/0-0",
  "b2b": undefined,
  "hasDisk": "1",
  "hasPassword": true,
  "hosted": false,
  "id": "4005521594",
  "isSSO": false,
  "lang": "ru",
  "login": "km256.new.1",
  "name": "km256.new.1",
  "needsPostregistration": false,
  "needsReset": false,
  "needsUpgrade": false,
  "needsUserApprove": false,
  "uid": "4005521594",
  "yandexStaffLogin": "",
}
`;

exports[`getAuthMiddleware Авторизация не найдена должна класть req объект для неавторизованного пользователя 1`] = `
Object {
  "accounts": Array [],
  "auth": false,
  "id": "0",
  "login": "",
}
`;

exports[`getAuthMiddleware Авторизация не найдена должна фолбэчится на неавторизиванного пользователя в случае ошибки 1`] = `
Object {
  "accounts": Array [],
  "auth": false,
  "error": true,
  "id": "0",
  "login": "",
}
`;
